# env-bootstrap-public

./: README.md  bootstrap.ps1  bootstrap.sh  pyproject.toml
src/env_bootstrap/: __init__.py  cli.py
